--- a/coverage_config.json
+++ b/coverage_config.json
@@ -1,5 +1,6 @@
 {
   "coverage_score": 79.8,
+  "coverage_score": 79.1,
   "exclude_path": "mmap_windows.rs",
   "crate_features": "backend-mmap"
 }
