--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/rust-vmm/vm-memory"
 readme = "README.md"
 license = "Apache-2.0 OR BSD-3-Clause"
 edition = "2018"
+autobenches = false
 
 [features]
 default = []
@@ -24,5 +25,14 @@ version = ">=0.3"
 features = ["errhandlingapi"]
 
 [dev-dependencies]
+criterion = "0.3.0"
 matches = ">=0"
 vmm-sys-util = ">= 0.4.0"
+
+[[bench]]
+name = "main"
+harness = false
+
+[profile.bench]
+lto = true
+codegen-units = 1
